Tuning parament.